--- a/scss/global/_window.scss
+++ b/scss/global/_window.scss
@@ -10,3 +10,9 @@
     cursor: pointer;
   }
 }
+
+.chat-message-heat {
+  background: none;
+  background-color: #fff8e6;
+  border: 2px #e0a400 solid;
+}
