--- a/templates/msg/heat-increased-chat-msg.hbs
+++ b/templates/msg/heat-increased-chat-msg.hbs
@@ -1,5 +1,5 @@
-<div>
-    <h2>Heat has increased from {{{tempCH}}} to {{{currentHeat}}}</h2>
+<div class="heat">
+    <h3>{{{name}}} has increased from {{{tempCH}}} to {{{currentHeat}}}</h3>
     <p><b>The Conspiracy Threat Level</b> is:</p> 
-    {{{conspiracyThreatLevel}}}
+    <span class="threat-level {{{threatColor}}}">{{{conspiracyThreatLevel}}}</span>
 <div>
