--- a/templates/dialog/take-them-out.hbs
+++ b/templates/dialog/take-them-out.hbs
@@ -1,51 +1,76 @@
 <form>
     <p>
-        <b>If you fight or shoot at a threat or they attack
-        you, say what success looks like: Hurt them; Subdue them; Avoid their attempt to hurt you; Some other narrative outcome</b>, then roll:
+        {{{localize "ATDC.dialog.takeThemOut.description"}}}
     </p>
     <form class="flexcol">
         <div class="form-group">
             <input type="checkbox" id="baseDie" name="baseDie" checked>
-            <label for="baseDie">Always start with <b>1d6</b></label>
+            <label for="baseDie">
+                {{{localize "ATDC.dialog.takeThemOut.baseDie"}}}
+            </label>
         </div>
         <div class="form-group">
             <input type="checkbox" id="expertiseDie" name="expertiseDie" {{#if expertiseUsed}}disabled{{/if}}>
-            <label for="expertiseDie">Add your Expertise Die if <b>Small Arms</b> or <b>Hand-toHand</b> is relevant and it isn’t cancelled.</label>
+            <label for="expertiseDie">
+                {{{localize "ATDC.dialog.takeThemOut.expertiseDie"}}}
+            </label>
         </div>
         <div class="form-group">
             <input type="checkbox" id="bonusDie" name="bonusDie">
-            <label for="bonusDie">Add the <span style="color: {{bonusDieColor}}"><b>Bonus Die</b></span> if your weapon is <b>heavy</b> or <b>explode</b> or you have <b>Deadly</b>.</label>
+            <label for="bonusDie">
+                {{{localize "ATDC.dialog.takeThemOut.bonusDieMessage"}}} <b style="color: {{bonusDieColor}}">{{{localize "ATDC.dialog.takeThemOut.bonusDieWords"}}}</b>
+            </label>
         </div>
         <div class="form-group">
             <input type="checkbox" id="stressDie" name="stressDie">
-            <label for="stressDie">Add your <b><span style="color: {{riskDieColor}}">Stress Die</span></b> if you are willing to take that risk</label>
+            <label for="stressDie">
+                {{{localize "ATDC.dialog.takeThemOut.stressDieMessage"}}} <b style="color: {{riskDieColor}}">{{{localize "ATDC.dialog.takeThemOut.stressDieWords"}}}</b>
+            </label>
         </div>
         </br>
-        <p><b style="font-size: 20px;color: {{takeThemOutDieColor}}">Take Them Out Risk Dice</b></p>
+        <p>
+            <b style="font-size: 20px;color: {{takeThemOutDieColor}}">
+                {{{localize "ATDC.dialog.takeThemOut.riskDie.description"}}}
+            </b>
+        </p>
         <div class="form-group">
             <input type="checkbox" id="threatHarmDie" name="threatHarmDie">
-            <label for="threatHarmDie"><b>If the threat is able to do you harm</b>, add 1 Risk Die to the dice pool.</label>
+            <label for="threatHarmDie">
+                {{{localize "ATDC.dialog.takeThemOut.riskDie.threatHarmDie"}}}
+            </label>
         </div>
         <div class="form-group">
             <input type="checkbox" id="threatSupernaturalDie" name="threatSupernaturalDie">
-            <label for="threatSupernaturalDie"><b>If they are a Supernatural</b>, add a 2nd Risk Die.</label>
+            <label for="threatSupernaturalDie">
+                {{{localize "ATDC.dialog.takeThemOut.riskDie.threatSupernaturalDie"}}}
+            </label>
         </div>
         <div class="form-group">
             <input type="checkbox" id="outnumberedDie" name="outnumberedDie">
-            <label for="outnumberedDie"><b>If you are outnumbered</b>, add another Risk Die.</label>
+            <label for="outnumberedDie">
+                {{{localize "ATDC.dialog.takeThemOut.riskDie.outnumberedDie"}}}
+            </label>
         </div>
         <div class="form-group">
             <input type="checkbox" id="weaponDie" name="weaponDie">
-            <label for="weaponDie"><b>If their weapon is heavy or explode</b>, add another Risk Die.</label>
+            <label for="weaponDie">
+                {{{localize "ATDC.dialog.takeThemOut.riskDie.weaponDie"}}}
+            </label>
         </div>
         <div class="form-group">
             <input type="checkbox" id="SupernaturalPowersDie1" name="SupernaturalPowersDie1">
             <input type="checkbox" id="SupernaturalPowersDie2" name="SupernaturalPowersDie2">
             <input type="checkbox" id="SupernaturalPowersDie3" name="SupernaturalPowersDie3">
             <input type="checkbox" id="SupernaturalPowersDie4" name="SupernaturalPowersDie4">
-            <label for="SupernaturalPowersDie1">If they have Powers, add another Risk Die per relevant Power.</label>
+            <label for="SupernaturalPowersDie1">
+                {{{localize "ATDC.dialog.takeThemOut.riskDie.SupernaturalPowersDie"}}}
+            </label>
         </div>
-        <p><i>Maximum number of Risk Dice added = 5.</i></p>
+        <p>
+            <i>
+                {{{localize "ATDC.dialog.takeThemOut.riskDie.note"}}}
+            </i>
+        </p>
     </form>
     </br>
 </form>
