--- a/templates/msg/harm-chat-content.hbs
+++ b/templates/msg/harm-chat-content.hbs
@@ -3,6 +3,7 @@
     <p>{{{diceOutput}}}</p>
     <b>{{localize "ATDC.actor.actions.chat.result.harm.modifier.label"}}</b> {{{bonusValue}}}
     </br>
+    {{log "maxDieNumber.html" maxDieNumber}}
     <b>{{localize "ATDC.actor.actions.chat.result.harm.final.label"}}</b> {{{maxDieNumber}}}
     <hr>
     {{{maxDieMessage}}}
