--- a/templates/msg/harm-chat-roll-msg.hbs
+++ b/templates/msg/harm-chat-roll-msg.hbs
@@ -1,6 +1,8 @@
 <hr>
 <div style="font-size: 1em" class="action" data-owner-id="{{ownerId}}">
-    You suffer a <b><i>Harmful Consequence!</i></b> Roll to find out how bad it is.
+    {{{localize "ATDC.chat.harmRoll.message"}}}
     </br>
-    <button type="button" class="roll-harm"><b style="color: {{{takeThemOutDieColor}}}"><i class="fa-regular fa-dice"></i> <i>Roll for Harm</i></b></button>
+    <button type="button" class="roll-harm"><b style="color: {{{takeThemOutDieColor}}}">
+        <i class="fa-regular fa-dice"></i> <i>{{{localize "ATDC.chat.harmRoll.buttonLabel"}}}</i></b>
+    </button>
 <div>
