--- a/templates/msg/heat-increased-chat-msg.hbs
+++ b/templates/msg/heat-increased-chat-msg.hbs
@@ -1,5 +1,5 @@
 <div class="heat">
-    <h3>{{{name}}} has increased from {{{tempCH}}} to {{{currentHeat}}}</h3>
-    <p><b>The Conspiracy Threat Level</b> is:</p> 
+    <h3>{{{increaseMessage}}}</h3>
+    <p>{{{localize "ATDC.chat.heatIncrease.threatLevelMessage"}}}</p> 
     <span class="threat-level {{{threatColor}}}">{{{conspiracyThreatLevel}}}</span>
 <div>
