--- a/templates/dialog/chase.hbs
+++ b/templates/dialog/chase.hbs
@@ -1,26 +1,21 @@
 <form>
     <p>
-        <b>When they are getting away and Control agrees there’s a reasonable way for you to catch them before they escape, and their Powers don’t make it impossible</b>, roll:
+        {{{localize "ATDC.dialog.chase.description"}}}
     </p>
     <form class="flexcol">
         <div class="form-group">
             <input type="checkbox" id="baseDie" name="baseDie" checked>
-            <label for="baseDie">Always start with <b>1d6</b></label>
+            <label for="baseDie">{{{localize "ATDC.dialog.chase.baseDie"}}}</label>
         </div>
         <div class="form-group">
             <input type="checkbox" id="expertiseDie" name="expertiseDie" {{#if expertiseUsed}}disabled{{/if}}>
             <label for="expertiseDie">
-                Add your <b>Expertise Die</b> if… 
-                <ul>
-                    <li><b>it’s a foot chase</b> &amp; you have <b>Military Fieldcraft</b>.</li>
-                    <li><b>they’re blending into a crowd</b> &amp; you have <b>Tradecraft</b>, <b>Larceny</b> or <b>Surveillance</b>.</li> 
-                    <li><b>If it’s a vehicle chase</b> &amp; you have <b>Vehicles</b>.</li>
-                </ul>
+                {{{localize "ATDC.dialog.chase.expertiseDie"}}}
             </label>
         </div>
         <div class="form-group">
             <input type="checkbox" id="stressDie" name="stressDie">
-            <label for="stressDie">Add your <b><span style="color: {{riskDieColor}}">Stress Die</span></b> if you are willing to take that risk</label>
+            <label for="stressDie">{{{localize "ATDC.dialog.chase.stressDieMessage"}}} <b style="color: {{riskDieColor}}">{{{localize "ATDC.dialog.chase.stressDieWords"}}}</b></label>
         </div>
     </form>
     </br>
