--- a/templates/dialog/do-something-else.hbs
+++ b/templates/dialog/do-something-else.hbs
@@ -1,19 +1,25 @@
 <form>
     <p>
-        <b>When you do something that isn’t covered by another move</b>, say what success looks like and roll:
+        {{{localize "ATDC.dialog.doSomethingElse.description"}}}
     </p>
     <form class="flexcol">
         <div class="form-group">
             <input type="checkbox" id="baseDie" name="baseDie" checked>
-            <label for="baseDie">Always start with 1d6</label>
+            <label for="baseDie">
+                {{{localize "ATDC.dialog.doSomethingElse.baseDie"}}}
+            </label>
         </div>
         <div class="form-group">
             <input type="checkbox" id="expertiseDie" name="expertiseDie" {{#if expertiseUsed}}disabled{{/if}}>
-            <label for="expertiseDie">Add another 1d6 if your <b>Expertise</b> is relevant.</label>
+            <label for="expertiseDie">
+                {{{localize "ATDC.dialog.doSomethingElse.expertiseDie"}}}
+            </label>
         </div>
         <div class="form-group">
             <input type="checkbox" id="stressDie" name="stressDie">
-            <label for="stressDie">Add your <b><span style="color: {{riskDieColor}}">Stress Die</span></b> if you are willing to take that risk</label>
+            <label for="stressDie">
+                {{{localize "ATDC.dialog.doSomethingElse.stressDieMessage"}}} <b style="color: {{riskDieColor}}">{{{localize "ATDC.dialog.doSomethingElse.stressDieWords"}}}</b>
+            </label>
         </div>
     </form>
     </br>
