--- a/templates/dialog/investigate.hbs
+++ b/templates/dialog/investigate.hbs
@@ -1,19 +1,25 @@
 <form>
     <p>
-        <b>When you want to ask a question about someone, something or somewhere, or want Control to reveal something about the situation</b>, roll:
+        {{{localize "ATDC.dialog.investigate.description"}}}
     </p>
     <form class="flexcol">
         <div class="form-group">
             <input type="checkbox" id="baseDie" name="baseDie" checked>
-            <label for="baseDie">Always start with <b>1d6</b></label>
+            <label for="baseDie">
+                {{{localize "ATDC.dialog.investigate.baseDie"}}}
+            </label>
         </div>
         <div class="form-group">
             <input type="checkbox" id="expertiseDie" name="expertiseDie" {{#if expertiseUsed}}disabled{{/if}}>
-            <label for="expertiseDie">Add another 1d6 if your <b>Expertise</b> is relevant</label>
+            <label for="expertiseDie">
+                {{{localize "ATDC.dialog.investigate.expertiseDie"}}}
+            </label>
         </div>
         <div class="form-group">
             <input type="checkbox" id="stressDie" name="stressDie">
-            <label for="stressDie">Add your <b><span style="color: {{riskDieColor}}">Stress Die</span></b> if you are willing to take that risk</label>
+            <label for="stressDie">
+                {{{localize "ATDC.dialog.investigate.stressDieMessage"}}} <b style="color: {{riskDieColor}}">{{{localize "ATDC.dialog.investigate.stressDieWords"}}}</b>
+            </label>
         </div>
     </form>
     </br>
