string updates and fixed a stress chat message bug

--- a/scss/global/_window.scss
+++ b/scss/global/_window.scss
@@ -16,3 +16,27 @@
   background-color: #fff8e6;
   border: 2px #e0a400 solid;
 }
+
+.stress-format {
+  font-weight: bold;
+  font-style: italic;
+  color: #A62424;
+}
+
+.heat-format {
+  font-weight: bold;
+  font-style: italic;
+  color: #eb7602;
+}
+
+.anchor-format {
+  font-weight: bold;
+  font-style: italic;
+  color: #a62497;
+}
+
+.intel-format {
+  font-weight: bold;
+  font-style: italic;
+  color: #2624a6;
+}
