--- a/scss/global/_components.scss
+++ b/scss/global/_components.scss
@@ -20,7 +20,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: #b2b2b2;
+    background-color: #a4a4a4;
     -webkit-transition: 0.4s;
     transition: 0.4s;
   }
