--- a/scss/global/_window.scss
+++ b/scss/global/_window.scss
@@ -40,3 +40,11 @@
   font-style: italic;
   color: #2624a6;
 }
+
+.actor {
+  
+  .window-content {
+    background: none;
+    background-color: #0D0D0D;
+  }
+}
