--- a/scss/components/_characters.scss
+++ b/scss/components/_characters.scss
@@ -1,4 +1,30 @@
 .character {
+  color: #dfdfdf;
+
+  input[type="text"]:focus, 
+  input[type="number"]:focus, 
+  input[type="password"]:focus, 
+  input[type="date"]:focus, 
+  input[type="time"]:focus, 
+  input[type="search"]:focus, 
+  input[type="text"], 
+  input[type="number"], 
+  input[type="password"], 
+  input[type="date"], 
+  input[type="time"], 
+  input[type="search"] {
+    color: #dfdfdf;
+  }
+
+  input[type="text"]::placeholder, 
+  input[type="number"]::placeholder, 
+  input[type="password"]::placeholder, 
+  input[type="date"]::placeholder, 
+  input[type="time"]::placeholder, 
+  input[type="search"]::placeholder {
+    color: #909090;
+  }
+
   .sheet-header {
     flex: 0 auto;
     overflow: hidden;
@@ -40,8 +66,8 @@
         .stress {
           flex: 0;
           padding: 5px 5px 5px 5px;
-          background-color: rgba(128, 128, 128, 0.2);
-          color: black;
+          background-color: #0B2039;
+          color: white;
           align-self: center;
           width: 100%;
           align-items: center;
@@ -96,8 +122,8 @@
 
         .intel {
           padding: 5px 10px 5px 10px;
-          background-color: rgba(128, 128, 128, 0.2);
-          color: black;
+          background-color: #0B2039;
+          color: white;
           align-self: center;
           width: 100%;
           align-items: center;
@@ -139,7 +165,7 @@
   .sheet-body {
     .main {
       input[type="text"]:disabled {
-        color: #605f57;
+        color: red;
       }
 
       input[type="text"]:disabled:hover {
@@ -241,7 +267,7 @@
       }
 
       .question {
-        color: rgb(58, 58, 58);
+        // color: #dfdfdf;
       }
     }
 
