--- a/templates/actor/parts/actor-main.hbs
+++ b/templates/actor/parts/actor-main.hbs
@@ -92,7 +92,7 @@
   </div>
 
   <div class="actions">
-    <div class="collapsable box">
+    <div class="collapsable">
       <a class="clickable float" data-roll-type="investigate" title="roll"><i class="fa-regular fa-dice"></i>{{localize "ATDC.actor.actions.label"}}</a>
       <details>
         <summary>{{localize "ATDC.actor.actions.investigate.label"}}</summary>
@@ -100,7 +100,7 @@
       </details>
     </div>
 
-    <div class="collapsable box">
+    <div class="collapsable">
       <a class="clickable float" data-roll-type="takeThemOut" title="roll"><i class="fa-regular fa-dice"></i>{{localize "ATDC.actor.actions.label"}}</a>
       <details>
         <summary>{{localize "ATDC.actor.actions.takeThemOut.label"}}</summary>
@@ -112,7 +112,7 @@
       </details>
     </div>
     
-    <div class="collapsable box">
+    <div class="collapsable">
       <a class="clickable float" data-roll-type="cover" title="roll"><i class="fa-regular fa-dice"></i>{{localize "ATDC.actor.actions.label"}}</a>
       <details>
         <summary>{{localize "ATDC.actor.actions.cover.label"}}</summary>
@@ -120,7 +120,7 @@
       </details>
     </div>
 
-    <div class="collapsable box">
+    <div class="collapsable">
       <a class="clickable float" data-roll-type="flee" title="roll"><i class="fa-regular fa-dice"></i>{{localize "ATDC.actor.actions.label"}}</a>
       <details>
         <summary>{{localize "ATDC.actor.actions.flee.label"}}</summary>
@@ -128,7 +128,7 @@
       </details>
     </div>
 
-    <div class="collapsable box">
+    <div class="collapsable">
       <a class="clickable float" data-roll-type="chase" title="roll"><i class="fa-regular fa-dice"></i>{{localize "ATDC.actor.actions.label"}}</a>
       <details>
         <summary>{{localize "ATDC.actor.actions.chase.label"}}</summary>
@@ -136,7 +136,7 @@
       </details>
     </div>
 
-    <div class="collapsable box">
+    <div class="collapsable">
       <a class="clickable float" data-roll-type="doSomethingElse" title="roll"><i class="fa-regular fa-dice"></i>{{localize "ATDC.actor.actions.label"}}</a>
       <details>
         <summary>{{localize "ATDC.actor.actions.doSomethingElse.label"}}</summary>
@@ -147,7 +147,7 @@
     <hr> <!-- Seek Releif from the Horror -->
     <p class="seek-relief-info">{{localize "ATDC.actor.seekRelief.info"}}</p>
 
-    <div class="collapsable box">
+    <div class="collapsable">
       <a class="clickable float" data-roll-type="behaveBadly" title="roll"><i class="fa-regular fa-dice"></i>{{localize "ATDC.actor.actions.label"}}</a>
       <details>
         <summary>{{localize "ATDC.actor.seekRelief.behaveBadly.label"}}</summary>
@@ -155,7 +155,7 @@
       </details>
     </div>
 
-    <div class="collapsable box">
+    <div class="collapsable">
       <a class="clickable float" data-roll-type="indulgeVice" title="roll"><i class="fa-regular fa-dice"></i>{{localize "ATDC.actor.actions.label"}}</a>
       <details>
         <summary>{{localize "ATDC.actor.seekRelief.vice.label"}}</summary>
@@ -163,7 +163,7 @@
       </details>
     </div>
 
-    <div class="collapsable box">
+    <div class="collapsable">
       <a class="clickable float" data-roll-type="seekGuidance" title="roll"><i class="fa-regular fa-dice"></i>{{localize "ATDC.actor.actions.label"}}</a>
       <details>
         <summary>{{localize "ATDC.actor.seekRelief.seekGuidance.label"}}</summary>
@@ -171,7 +171,7 @@
       </details>
     </div>
 
-    <div class="collapsable box">
+    <div class="collapsable">
       <div {{#if system.anchor.noSolace}}class="disabled"{{/if}}>
         <a class="clickable float" data-roll-type="seekSolace" title="roll"><i class="fa-regular fa-dice"></i>{{localize "ATDC.actor.actions.label"}}</a>
       </div>
@@ -181,7 +181,7 @@
       </details>
     </div>
     
-    <div class="collapsable box">
+    <div class="collapsable">
       <a class="clickable float" data-roll-type="revealHistoryTogether" title="roll"><i class="fa-regular fa-dice"></i>{{localize "ATDC.actor.actions.label"}}</a>
       <details>
         <summary>{{localize "ATDC.actor.seekRelief.revealHistory.label"}}</summary>
