--- a/scss/components/_npcs.scss
+++ b/scss/components/_npcs.scss
@@ -3,7 +3,6 @@
     flex: 0;
     font-size: x-large;
     padding: 5px;
-    background-color: #00000024;
     font-weight: bold;
     text-align-last: center;
     font-family: serif;
@@ -22,6 +21,7 @@
       flex: 0 0 190px;
       height: 190px;
       margin-right: 5px;
+      border: 1px #94ABBF solid;
     }
 
     .header-fields {
@@ -34,11 +34,6 @@
 
       input[type=text] {
         width: 100%;
-        box-sizing: border-box;
-        border: none;
-        background: none;
-        border-bottom: 1px solid black;
-        border-radius: 0;
         margin: 0;
       }
 
@@ -110,9 +105,7 @@
     .editor {
         height: 148px;
         border-radius: 5px;
-        border: 2px solid #00000047;
         padding: 0 5px 0 5px;
-        background: rgba(0, 0, 0, 0.05);
     }
   }
 
@@ -175,10 +168,7 @@
 
     .editor {
       height: 310px;
-      border-radius: 5px;
-      border: 2px solid #00000047;
       padding: 0 5px 0 5px;
-      background: rgba(0, 0, 0, 0.05);
     }
   }
 }
