--- a/scss/global/_components.scss
+++ b/scss/global/_components.scss
@@ -70,6 +70,11 @@
 
 // action boxes
 .collapsable {
+  padding: 2px;
+  margin: 5px;
+  align-items: center;
+  border: 1px #3d4750 solid;
+
   .disabled {
     pointer-events: none;
   }
