--- a/scss/components/_npcs.scss
+++ b/scss/components/_npcs.scss
@@ -22,6 +22,7 @@
       height: 190px;
       margin-right: 5px;
       border: 1px #94ABBF solid;
+      border-radius: 6px 6px 0px 0px;
     }
 
     .header-fields {
