--- a/templates/actor/actor-character-sheet.hbs
+++ b/templates/actor/actor-character-sheet.hbs
@@ -4,7 +4,9 @@
   <header class="sheet-header">
     <img class="profile-img" src="{{actor.img}}" data-edit="img" title="{{actor.name}}" height="196" width="196"/>
     <div class="header-fields">
-      <h1 class="charname"><input name="name" type="text" value="{{actor.name}}" placeholder="{{localize "ATDC.actor.name.placeholder"}}"/></h1>
+      <h1 class="charname">
+        <input name="name" type="text" value="{{actor.name}}" placeholder="{{localize "ATDC.actor.name.placeholder"}}"/>
+      </h1>
       <div class="resources grid grid-2col">
         <!-- Stress -->
         <div class="stress-box flexcol box">
