--- a/scss/components/_characters.scss
+++ b/scss/components/_characters.scss
@@ -14,6 +14,7 @@
       margin-right: 5px;
       margin-left: 5px;
       border: 1px #94ABBF solid;
+      border-radius: 6px 6px 0px 0px;
     }
 
     .header-fields {
@@ -30,6 +31,10 @@
         width: 100%;
         height: 100%;
         margin: 0;
+        padding-left: 10px;
+        border: 1px solid #94ABBF;
+        background-color: #0B2039;
+        border-radius: 6px 6px 0px 0px;
       }
     }
 
@@ -40,6 +45,7 @@
       .stress-box {
         .stress {
           flex: 0;
+          border-radius: 6px 6px 0px 0px;
           padding: 5px 5px 5px 5px;
           background-color: #0B2039;
           color: white;
@@ -97,6 +103,7 @@
 
         .intel {
           padding: 5px 10px 5px 10px;
+          border-radius: 6px 6px 0px 0px;
           background-color: #0B2039;
           color: white;
           align-self: center;
