--- a/scss/global/_components.scss
+++ b/scss/global/_components.scss
@@ -74,6 +74,7 @@
   margin: 5px;
   align-items: center;
   border: 1px #3d4750 solid;
+  border-radius: 6px 6px 0px 0px;
 
   .disabled {
     pointer-events: none;
